--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -31,6 +31,9 @@ main.Homepage-Hero {
     letter-spacing: -.1px;
     font-weight: 400;
   }
+  a.cta.signup {
+    margin-top: 40px;
+  }
   .actions {
     margin-top: 40px;
     position: relative;
@@ -38,37 +41,34 @@ main.Homepage-Hero {
       display: inline-block;
       width: 1px;
       height: 50px;
-      background: white;
+      background-color: rgba(255,255,255,.2);
       vertical-align: top;
     }
-  }
-  a {
-    transition: transform .1s ease;
-    &:hover {
-      transform: scale(1.05);
-    }
-    &.cta {
-      background-color: transparent;
-      padding-left: 0;
-      padding-right: 0;
-      font-weight: 400;
-    }
-    &.learn-more {
-      margin: 0 0 0 30px;
-    }
-    &.vision {
-      margin: 0 30px 0 -68px;
-      svg {
-        margin-right: 10px;
-        margin-top: 1px;
-        width: 24px;
-        height: 24px;
-        vertical-align: top;
-        fill: white;
+    a {
+      transition: transform .1s ease;
+      &:hover {
+        transform: scale(1.05);
       }
-    }
-    strong {
-      font-weight: 600;
+      &.cta {
+        background-color: transparent;
+        padding-left: 0;
+        padding-right: 0;
+        font-weight: 400;
+      }
+      &.vision {
+        margin: 0 30px;
+        svg {
+          margin-right: 10px;
+          margin-top: 1px;
+          width: 24px;
+          height: 24px;
+          vertical-align: top;
+          fill: white;
+        }
+      }
+      strong {
+        font-weight: 600;
+      }
     }
   }
 }
