client: jekyll: main cta color changed

--- a/docs/_css/home/index.scss
+++ b/docs/_css/home/index.scss
@@ -33,7 +33,7 @@ a.cta {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  background-color: #48BA7D;
+  background-color: #F2778A;
   color: #FFFFFF;
   font-size: 20px;
   font-weight: 600;
