client: jekyll: new pricing structure

--- a/docs/_includes/css/pricing.css
+++ b/docs/_includes/css/pricing.css
@@ -706,6 +706,13 @@ a:hover {
   font-size: 18px;
   line-height: 26px;
 }
+.Pricing-PriceSegments--featureSection span.footprint.prominent i{
+  font-weight: 400;
+  background: #48BA7D;
+  color: white;
+  padding: 0 8px;
+  border-radius: 4px;
+}
 
 .Pricing-PriceSegments--featureItem {
   font-weight: 400;
@@ -804,6 +811,11 @@ a:hover {
 }
 .Pricing-PriceSegment--price span.first-line cite {
   font-size: 24px;
+}
+.Pricing-PriceSegment--price span.first-line i {
+  font-size: 24px;
+  font-weight: 300;
+  opacity: .5;
 }
 
 .Pricing-PriceSegment--price span.second-line {
@@ -938,7 +950,7 @@ a:hover {
   display: block;
   border-top: 1px solid #EBEBEB;
 }
-#Pricing-PriceSegments--devTeams {
+#Pricing-PriceSegments--kodingLite {
   z-index: 1;
   position: relative;
 }
@@ -1020,7 +1032,7 @@ a:hover {
 /* PRICING SEGMENTS */
 /* DEV TEAMS */
 
-.Pricing-PriceSegments section:first-child {
+.Pricing-PriceSegments section#Pricing-PriceSegments--kodingLite {
   margin-top: -150px;
   margin-bottom: 0;
 }
