fixed  structure with redux for addons tab

--- a/client/home/lib/styl/homeaddons.styl
+++ b/client/home/lib/styl/homeaddons.styl
@@ -13,47 +13,44 @@ Home Business Add-ons styles
 .kdtabpaneview.add-ons
   .HomeAppView--section
     border-radius                     0
-    
-.HomeAppView--section.business-add-on-banner
-.HomeAppView--section.support-plans-banner
-  border                              none
-  padding                             0
-  margin                              0
-  
-  h3, h4
-    font-size                         32px
-    
+
+.business-add-ons-container
+.support-plans-container
+  padding-bottom                      32px
   .Banner
     padding                           48px
-    
-  .Actions
-    padding-bottom                    100px
+    border                            none
+    margin                            0
+    .Actions
+      padding-bottom                  100px
+    h3, h4
+      font-size                       32px
+
+.support-plans-container
+  .Banner
+    padding-right                     300px
 
 header#koding-button
 header#available-plans
   margin-top                          30px
-  
-.HomeAppView--section.business-add-on-support-plans-banner
-.HomeAppView--section.support-plans-business-add-on-banner
+
+
+.business-add-on-support-plans-banner-section
+.support-plans-business-add-on-banner-section
   padding                             0
   border                              none
   font-weight                         inherit
-  
-  .Actions
-    padding-right                     12px
-  
-.HomeAppView--section.support-plans-banner
-  .Banner
-    padding-right                     300px
-    
-.support-plans
-  .SupportPlanSection
-      margin                          0 48px 30px
-      
-.HomeAppView--section.support-plans-section
-.HomeAppView--section.business-add-on-deactivation
-.HomeAppView--section.support-plan-deactivation
+  .business-add-on-support-plans-banner
+  .support-plans-business-add-on-banner
+    padding                           32px
+
+.SupportPlanSection
+  margin                              0 48px 30px
+
+.support-plans-section
+.business-add-on-deactivation
+.support-plan-deactivation
   padding                             0
-  margin                              0 0 30px
+  margin                              0
   border                              none
   background                          none
