ApiTokens: show shadowed uuid.v4 on ui if code is ‘*’, style updates

--- a/client/home/lib/styl/homeapitoken.styl
+++ b/client/home/lib/styl/homeapitoken.styl
@@ -19,7 +19,7 @@
     line-height             14px
 
 .HomeApp-ApiToken--footer--button-wrapper
-  padding                   26px 0 17px 0
+  padding                   30px 0 17px 0
   cursor                    pointer
 
   .custom-link-view.HomeAppView--button.primary.disabled
@@ -48,15 +48,15 @@
   font-weight               400
   padding-top               4px
   line-height               22px
-  text-rendering            geometricPrecision
   letter-spacing            0.15px
+  font-family               monospace
+  font-size                 14px
 
 .HomeApp-ApiToken--api-token-detail
   color                     #ACACAC
   font-weight               300
   line-height               14px
   letter-spacing            0.14px
-  text-rendering            geometricPrecision
   font-size                 14px
   font-style                italic
 
