--- a/docs/_includes/css/applyforms.css
+++ b/docs/_includes/css/applyforms.css
@@ -68,6 +68,7 @@ body {
   font-size: 16px;
   display: block;
   margin-bottom: 2px;
+  line-height: 1.4em;
 }
 
 .ApplyForm--body label p {
@@ -101,11 +102,11 @@ body {
 }
 .ApplyForm--body input[type=checkbox] {
   float: left;
-  margin-top: 2px;
+  margin-top: 5px;
 }
 .ApplyForm--body input[type=radio] {
   float: left;
-  margin-top: 0;
+  margin-top: 3px;
 }
 .ApplyForm--body input[type=checkbox] + label,
 .ApplyForm--body input[type=radio] + label {
@@ -126,6 +127,7 @@ body {
   font-weight: 700;
   color: #515151;
   margin-bottom: 30px;
+  line-height: 1.4em;
 }
 
 .ApplyForm--body h3 strong {
