client/stack-editor: update close icon on hover

--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -35,6 +35,7 @@ contentModal.styl
         borderBox()
 
     .kdmodal-inner .close-icon
+    .kdmodal-inner .close-icon:hover
       r-sprite              app content_modal_close_icon
       width                 23px
       height                24px
