--- a/client/stack-editor/lib/styl/stackeditor.styl
+++ b/client/stack-editor/lib/styl/stackeditor.styl
@@ -780,3 +780,5 @@ $borderColor                = #E3E3E3
   .kdinput.text
     opacity                 0.5
 
+.CredentialModal .credential code
+  border                    0
