CredentialItem: show provider labels with colors http://take.ms/VV1Pm

--- a/client/home/lib/styl/homestacks.styl
+++ b/client/home/lib/styl/homestacks.styl
@@ -144,6 +144,7 @@ $borderColor                = rgba(151, 151, 151, .52)
           color             #FFFFFF
           text-transform    uppercase
           top               -5px
+          fr()
 
         .title
           margin-right      10px
