CredentialListItem: fire filter event once provider label clicked

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -404,6 +404,7 @@ $stack-border-width         = 2px
         border-radius       3px
         color               #FFF
         text-shadow         0px 1px 1px #333
+        cursor              pointer
         fr()
 
 #kdmaincontainer.hover
