--- a/client/stack-editor/lib/styl/stackeditor.styl
+++ b/client/stack-editor/lib/styl/stackeditor.styl
@@ -782,3 +782,7 @@ $borderColor                = #E3E3E3
 
 .CredentialModal .credential code
   border                    0
+
+
+.kdmodal.CredentialModal .kdmodal-inner .kdmodal-content
+  margin                    0
