https for all images, and copy change

--- a/docs/_includes/badges.html
+++ b/docs/_includes/badges.html
@@ -1,4 +1,4 @@
-{% assign path = "http://koding-cdn.s3.amazonaws.com/badges/made-with-koding/v1/koding_badge_" %}
+{% assign path = "https://koding-cdn.s3.amazonaws.com/badges/made-with-koding/v1/koding_badge_" %}
 
 
 {% capture badgeHtml %}
