SideView: support custom controls per view, add plus button for creds

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -307,6 +307,9 @@ $stack-border-width         = 2px
         display             block
         color               $stack-fg-color-yellow
 
+    .controls .kdbutton.plus
+      fa                    plus
+      color                 $stack-fg-color-yellow
 
   .side-view
 
