ComputeController.UI: base button style update

--- a/client/stack-editor/lib/styl/stackeditorcredentials.styl
+++ b/client/stack-editor/lib/styl/stackeditorcredentials.styl
@@ -29,7 +29,7 @@ $buttonGray                 = #858585
       .advanced-field
         display             block
 
-    button.kdbutton.solid.medium
+    button.kdbutton.solid.compact
       margin-left           12px
       outlineButton         $buttonGray
 
