CredentialsListController: filterView to selectionView for more usage

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -341,13 +341,14 @@ $stack-border-width         = 2px
       .lazy-loader
         display             none
 
-      .filter-view
+      .selection-view
         width               auto
         height              auto
         color               #fff
         font-size           12px
         padding             8px 15px 5px 20px
-        background          rgba(255, 255, 255, .1)
+        background          #3c3c3c
+        z-index             10
 
         b
           font-weight       600
