--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -356,3 +356,4 @@ homemyteam.styl
 .delete-team
   margin                    40px 0px 30px 47px
   color                     #f2778a
+  cursor                    pointer
