Credentials: initial create credential flow when there is no credential

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -411,6 +411,13 @@ $stack-border-width         = 2px
     .revert-button
       right                 150px
 
+    .add-big-btn
+      top                   20px
+      left                  50%
+      width                 172px
+      margin-left           -86px
+      display               block
+
     .kdlistitemview.credential
       font-size             14px
       padding               10px 15px 10px 20px
@@ -465,7 +472,7 @@ $stack-border-width         = 2px
     background              $stack-bg-color
     font-size               13px
     color                   $stack-fg-color
-    border-bottom           90px solid $stack-bg-color-dark
+    border-bottom           93px solid $stack-bg-color-dark
     abs()
 
     .kdformview
