Toolbar: show a stack icon next to template title

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -73,6 +73,13 @@ $stack-border-width         = 2px
     .kdbutton.expand
       abs                   13px, 120px !important
 
+    h3
+      display               inline-block
+      margin-left           10px
+
+    cite
+      fa                    th-list
+
 
   .content
     background              $stack-bg-color
