Style: hide notification counter when sidebar collapsed

--- a/client/app/lib/styl/miniwelcomesteps.styl
+++ b/client/app/lib/styl/miniwelcomesteps.styl
@@ -1,6 +1,6 @@
 .collapsed
   cite.WelcomeSteps-miniview--count
-    left                    18px
+    display                 none
   section.WelcomeSteps-miniview
     left                    -5px
 
