CredentialListItem: more visible selected styling

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -467,6 +467,7 @@ $stack-border-width         = 2px
       borderBox()
 
       &:hover
+      &.selected
         background          $stack-bg-color-bright
         .kdinput.checkbox
           opacity           1
