kd.ButtonView: blue button

--- a/client/app/lib/styl/resurrection.commons.styl
+++ b/client/app/lib/styl/resurrection.commons.styl
@@ -189,6 +189,19 @@ aside.app-sidebar
   &:focus
     shadow             0 0 10px -2px logoBg
 
+.kdbutton.solid.blue
+  bg                   color #67A2EE
+  span.button-title
+    color              white
+  &:hover
+  &:active
+  &:focus
+    bg                 color #629DEA
+    span.button-title
+      color            white
+  &:focus
+    shadow             0 0 10px -2px logoBg
+
 .kdbutton.solid.compact
   height                    30px
   padding                   0 16px
